update readme, fixing pokesingle css

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,10 +1,12 @@
 .card {
     height: 290px;
     width: 200px;
-    box-shadow: 0 0 3px darkblue;
+    box-shadow: 0 0 3px darkgray;
     text-align: center;
     padding: 0.5rem;
-    box-sizing: border-box;
+    border-radius: 30px;
+    background-color: white;
+    opacity: 0.8;
 }
 
 .card img {
@@ -12,12 +14,16 @@
     height: auto;
     margin: 0;
     padding: 0;
+    opacity: 1;
 }
 
 h3 {
     margin: 0.3rem, 0;
+
 }
 
 a {
     color: orange;
+    margin-top: 1rem;
+    font-weight: 800;
 }
