--- a/src/pages/Pokemons.module.css
+++ b/src/pages/Pokemons.module.css
@@ -1,14 +1,15 @@
 .pokemonsMain {
     display: grid;
-    margin: auto;
+    padding: 1rem;
+    background-color: var(--faded-eggplant);
 }
 
 .cards {
-    grid-area: main;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(auto, 1fr);
     grid-gap: 1rem;
     padding: 1rem;
     margin: auto;
+
 }
