--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -1,8 +1,7 @@
 .main {
     width: 100vw;
-    margin-top: 0;
     height: 100%;
     min-height: 300px;
-    background-color: var(--main-background-color);
+    background-color: var(--faded-eggplant);
 
 }
