--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -1,9 +1,8 @@
 /*BEM style*/
 
 .nav {
-    height: 120px;
-    background-color: rgb(33, 12, 53);
-    margin: 0;
+    height: 140px;
+    background-color: var(--indigo);
 }
 
 .nav__flex {
@@ -11,30 +10,15 @@
     height: 100%;
     width: 100%;
     justify-content: space-around;
+    align-items: center;
 }
 
 .nav__a {
-    line-height: 80px;
-    color: rgb(255, 106, 0);
+    color: var(--burnt-orange);
     font-weight: 500;
     font-size: 2rem;
-
 }
 
 .nav__a:hover {
-    color: rgb(247, 224, 52);
+    color: var(--yellow);
 }
-
-.nav__a:active {
-    animation: flash 2s linear 2;
-}
-
-
-/* 
-@keyframes {
-    flash {
-        0%: rgb(247, 224, 52),
-        50%: rgb(69, 27, 80),
-        100%: rgb(247, 224, 52),
-    }
-} */
