--- a/src/components/Pokesingle.module.css
+++ b/src/components/Pokesingle.module.css
@@ -1,13 +1,14 @@
 .pokesingle {
     display: flex;
     align-items: center;
-    background-color: var(--eggplant);
+    background-color: var(--faded-eggplant);
     opacity: 0.8;
     height: 100%;
     min-height: 300px;
     width: 100%;
     border: 3px solid var(--burnt-orange);
     padding: 1rem;
+    justify-content: center;
 }
 
 .container {
@@ -25,9 +26,10 @@
 .info {
     flex: 50%;
     height: 100%;
-    box-shadow: 0 0 1px white, 0 0 4px rgb(255, 106, 0);
+    box-shadow: 0 0 6px var(--burnt-orange), 0 0 7px var(--yellow), 0 0 9px white;
     padding: 1rem;
     margin: 1rem;
+    margin-top: 3rem;
     border-radius: 30px;
 }
 
